# poetryCrystallization

./: .gitignore  CROSS_CULTURAL_DATA_EVAL.md  EXPERIMENTS_TODO.md  FINAL_EXPERIMENT_PLAN.md  PAPER_REVISION_SUMMARY.md  README.md  TODAY_SUMMARY.md  changelog_0423.md  changelog_0603.md  changelog_0604.md  changelog_0604_label_leakage.md  package-lock.json  package.json  paper.tex  paper_new_sections.tex  pyproject.toml
data/processed/: balance_check.json  bootstrap_stability.json  cbdb_dynasty_temporal.json  cbdb_expanded_network.json  cbdb_title_edges.json  corpus_stats.json  directed_network.json  distance_matrix_meta.json  expA_tsne_kmeans.json  expB_ttest.json  expC_bert_finetune.json  expC_v2_results.json  (+43 more)
paper/: literature_review_existing.md  literature_review_report.md  literature_survey.bib  literature_survey.json
scripts/: 30_fig1_pca_semantic_gravity_v2.py  31_fig2_permanova_v2.py  31_fig3_community_v2.py  32_fig4_intertextual_v2.py  34_fig6_geographic_gravity_v2.py  35_fig5_bert_classification.py  expC_attention_viz.py  expC_bert_finetune.py  expC_gradcam.py  expC_v2_poem_level.py  expD_model_comparison.py  expE_cipai_counterfactual.py  expF_tfidf_baseline.py  expG_sensitivity.py  expH_cross_dynasty.py  expI_cipai_compare.py  expJ_time_window.py  expK_prosody_baseline.py  expL_cross_cultural.py  expL_cross_cultural_analysis.py  expL_encode_spanish.py  expM_label_leakage.py  expN_ci_block_bootstrap.py  fig6_attention_standalone.py  fig7_gradcam_standalone.py  fig_concept_poem_space.py  generate_figK_prosody.py  generate_figures.py  generate_review_figures.py
(+9 files in other folders)
